# millie

./: .cursorignore  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
migrations/: 20250125_145815_initial_schema.py
millie/: __main__.py
millie/cli/: __init__.py  manager.py  router.py
millie/cli/attu/: __init__.py
millie/cli/db/: manager.py
millie/cli/migrate/: manager.py
millie/db/: migration.py  migration_builder.py  migration_history.py  migration_manager.py  schema_differ.py  schema_history.py  session.py
millie/orm/: __init__.py  base_model.py  milvus_model.py
millie/schema/: schema.py
sandbox/: __init__.py
sandbox/examples/: __init__.py  query_examples.py
sandbox/models/: __init__.py  rule.py  rule_violation.py  seed_rule_violations.py  seed_rules.py
sandbox/schema/history/: RuleModel.json  RuleViolationModel.json
sandbox/schema/migrations/: 20250126_012816_initial_schema.py  20250126_013214_add_test_field.py  20250206_123443_initial_schema.py  20250206_131131_initial_schema.py  20250206_131359_add_rule_violations.py
sandbox/seed/: seed_rules.py
scripts/: create_virtualenvs  test_all_versions
src/millie/: __init__.py
src/millie/cli/: __init__.py  manager.py  router.py  util.py
src/millie/db/: __init__.py  connection.py  embedding_manager.py  migration.py  migration_builder.py  migration_history.py  (+8 more)
tests/: __init__.py  test_migration_manager.py  util.py
tests/cli/: __init__.py  docker_mock.py  test_attu.py  test_db.py  test_embeddings.py  test_migrate.py  test_milvus.py  test_router.py
tests/db/: test_connection.py  test_embedding_manager.py  test_migration.py  test_migration_builder.py  test_migration_manager.py  test_migrations.py  test_milvus_seeder.py  test_schema.py  test_schema_differ.py  test_schema_history.py  test_seed_manager.py  test_session.py
tests/orm/: test_base_model.py  test_milvus_model.py
tests/schema/: test_schema.py
(+21 files in other folders)
